public_html/styles.css
body {
	/*background-image: url("nature.jpg");*/
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	background-attachment: fixed;
	font-family: FontAwesome, "Courier New", sans-serif;
background-color: #dbdbdb;
}

header {
	background-image: url("ocean.jpg");
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	color: white;
}

.elizabeth {
	position: absolute;
	left:700px;
}

.text {
	position: absolute;
	top:200px;
}

.section-text {
	font-weight: bold;
	font-size: 3em;
}



img[src*="adel"]{
	border-radius: 50%;
}

div[class*="header-text"]{
	font-weight: bold;
	font-size: 2em;
}

.nav-item{
	font-weight: bold;
	font-size: 1em;
}

/*img[src*="slide"] {*/
	/*width: 5em;*/
	/*height: 5em;*/
/*}*/

.carousel-inner img {
	width: 100%;
	height: 30em;
	margin: auto;
}

div[class*="about-me"] {
	/*background-color: #34ADFF;
	background-image: -webkit-linear-gradient(30deg, #9C0561 50%, #9C05A6 50%);*/
}

div[class*="portfolio"] {

}

footer {
	width: 100%;
	background-color: teal;
}

.navbar-custom .navbar-nav .nav-link {
	color: white;
}

.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:hover .nav-link {
	color: white;
	background-color: teal;
}

